[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemy/enemyShip.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemy2.gd" type="Script" id=2]
[ext_resource path="res://Scene/Particle.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.7658, 25.3616 )

[node name="Enemy" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.91022, 0.606811 )
scale = Vector2( 4.61053, 2.45635 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -23.1396, 25.3572 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 22.199, 25.5862 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
